--- a/_sass/_base.scss
+++ b/_sass/_base.scss
@@ -82,6 +82,11 @@ button, .btn {
   }
 }
 
+pre {
+  padding: 1rem;
+  margin: 0;
+}
+
 // Followed Boostrap's breakpoints specs
 @media screen and (min-width: 576px) {
 
