--- a/_includes/head.html
+++ b/_includes/head.html
@@ -13,7 +13,7 @@
     {%- feed_meta -%}
 
     {%- if site.google_analytics and site.environment == 'production' or jekyll.environment == 'production'  -%}
-      {%- include google-analytics.html -%}
+      {%- include google_analytics.html -%}
     {%- endif -%}
   </head>
   
