Updated styles & added disqus

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark">
+<footer class="bg-dark elevation-8">
   <div class="container py-1">
     <div class="social-list">
       {%- if site.github_username -%}
@@ -17,6 +17,6 @@
         </a>
       {%- endif -%}
     </div>
-    <p class="text-center color-light opacity-50 m-3">© Bjorn Lu 2019. All rights reserved unless otherwise specified.</p>
+    <p class="text-center color-light opacity-50 m-3">© Bjorn Lu 2019</p>
   </div>
 </footer>
