--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -18,7 +18,7 @@
 
       (function() { // DON'T EDIT BELOW THIS LINE
       var d = document, s = d.createElement('script');
-      s.src = 'https://bjornlug-github-io.disqus.com/embed.js';
+      s.src = '{{ site.disqus_src }}';
       s.setAttribute('data-timestamp', +new Date());
       (d.head || d.body).appendChild(s);
       })();
