--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -8,6 +8,11 @@ layout: default-page
     {%- if page.subtitle -%}
       <h4 class="opacity-70 my-1">{{ page.subtitle }}</h4>
     {%- endif -%}
+    <div class="mb-3">
+      {%- for tag in page.tags -%}
+        {%- include chip.html name=tag -%}
+      {%- endfor -%}
+    </div>
     <div class="opacity-70 mb-1">
       <time datetime="{{ page.date | date_to_xmlschema }}">
         {{ page.date | date: site.date_format }}
@@ -31,7 +36,7 @@ layout: default-page
     <a class="btn text-deco-none" href="{{ '/blog/' | relative_url }}">Read other posts</a>
   </div>
 
-  {%- if page.comments -%}
+  {%- if page.comments and site.environment == 'production' or jekyll.environment == 'production' -%}
     {%- include disqus_comments.html -%}
   {%- endif -%}
 </article>
