--- a/_includes/head.html
+++ b/_includes/head.html
@@ -3,6 +3,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
   
+    <link rel="shortcut icon" href="{{ '/favicon.ico' | relative_url }}" type="image/x-icon">
+
     <title>{%- if page.title -%} {{ page.title }} | {% endif -%} {{ site.title }}</title>
     {%- seo title=false -%}
 
