--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,7 +1,15 @@
 <header>
   <nav class="navbar {%- unless include.clear %} bg-dark elevation-4 {%- endunless -%}">
     {%- for item in site.data.navigation -%}
-      <a class="nav-link {%- if page.url == item.link %} active {%- endif -%}" href="{{ item.link | relative_url }}">{{ item.name }}</a>
+      <a class="nav-link 
+        {% if item.link == '/' -%}
+          {%- if page.url == item.link -%}
+            active
+          {%- endif -%}
+        {%- elsif page.url contains item.link -%}
+          active
+        {%- endif -%}" 
+        href="{{ item.link | relative_url }}">{{ item.name }}</a>
     {%- endfor -%}
   </nav>
 </header>
