Update hero and styles

--- a/_includes/disqus_comments.html
+++ b/_includes/disqus_comments.html
@@ -1,7 +1,7 @@
-  <div id="loadBtn" class="w-100 mb-5">
+  <div id="loadBtn" class="w-100">
     <button class="w-100 py-3" onclick="loadComments();">Load comments</button>
   </div>
-  <div id="disqus_thread" class="mb-5"></div>
+  <div id="disqus_thread"></div>
   <script>
     let commentsLoaded = false;
     function loadComments() {
