--- a/_layouts/home-w-title.html
+++ b/_layouts/home-w-title.html
@@ -18,6 +18,8 @@ layout: default
       {%- endif -%}
     </div>
   </div>
-  {{ content }}
+  <div class="my-5">
+    {{ content }}
+  </div>
 </main>
 {%- include footer.html -%}
