--- a/assets/css/home.scss
+++ b/assets/css/home.scss
@@ -1,6 +1,199 @@
 ---
 ---
 
+$story-background: #343a40;
+$rocket-color-primary: #D7CDCC;
+$rocket-color-secondary: #D1603D;
+$rocket-color-window: #C6D8D3;
+$story-text-color: #f8f9fa;
+
+.story-container {
+  position: relative;
+  width: 100%;
+  height: 100%;
+  overflow: hidden;
+
+  &:active {
+    .rocket, .story-text {
+      animation-play-state: running;
+    }
+  } 
+
+  .rocket {
+    position: absolute;
+    z-index: 0;
+    bottom: 100px;
+    left: 50%;
+    animation: rocket-fly 2s cubic-bezier(0.55, 0.055, 0.675, 0.19) forwards;
+    animation-play-state: paused;
+
+    .rocket-body {
+      position: absolute;
+      width: 40px;
+      height: 120px;
+      background-color: $rocket-color-primary;
+      border-radius: 70%;
+      transform: translateX(-50%) translateY(-50%);
+
+      &::after {
+        content: '';
+        position: absolute;
+        width: 40px;
+        height: 120px;
+        background-color: $rocket-color-secondary;
+        border-radius: 70%;
+        clip-path: ellipse(50% 10% at 50% 10%);
+      }
+    }
+
+    .rocket-window {
+      position: absolute;
+      width: 26px;
+      height: 26px;
+      background-color: $rocket-color-window;
+      border-radius: 50%;
+      border: 3px solid gray;
+      transform: translateX(-50%) translateY(-50%);
+    }
+
+    .rocket-wing {
+      position: relative;
+      top: 50px;
+
+      &::before, &::after {
+        content: '';
+        position: absolute;
+        z-index: -1;
+        bottom: 5%;
+        border-bottom: 40px solid $rocket-color-secondary;
+      }
+
+      &::before {
+        left: 5px;
+        border-left: 50px solid transparent;
+        border-top-left-radius: 50%;
+        transform: translateX(-100%) rotate(-40deg);
+      }
+
+      &::after {
+        right: 5px;
+        border-right: 50px solid transparent;
+        border-top-right-radius: 50%;
+        transform: translateX(100%) rotate(40deg);
+      }
+    }
+
+    .rocket-tail {
+      position: absolute;
+      width: 16px;
+      top: 58px;
+      border-bottom: 5px solid $rocket-color-secondary;
+      border-left: 2px solid transparent;
+      border-right: 2px solid transparent;
+      transform: translateX(-50%);
+    }
+  }
+
+  .moon {
+    position: absolute;
+    top: 100%;
+    left: 50%;
+    width: 810px;
+    height: 810px;
+    border-radius: 50%;
+    background-color: $rocket-color-primary;
+    transform: translateX(-50%) translateY(-50px);
+
+    &::before {
+      content: '';
+      position: absolute;
+      top: 25px;
+      left: calc(50% - 100px);
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: darken($rocket-color-primary, 5);
+    }
+
+    &::after {
+      content: '';
+      position: absolute;
+      top: 15px;
+      left: calc(50% + 20px);
+      width: 50px;
+      height: 50px;
+      border-radius: 50%;
+      background-color: darken($rocket-color-primary, 5);
+    }
+  }
+
+  .story-text {
+    position: absolute;
+    bottom: 10%;
+    width: 100%;
+    color: $story-text-color;
+    text-align: center;
+    opacity: 0;
+    animation: story-text-in 1s .8s forwards;
+    animation-play-state: paused;
+  }
+
+  .nightsky {
+    position: relative;
+
+    .star {
+      position: absolute;
+      width: 3px;
+      height: 3px;
+      border-radius: 50%;
+      background-color: white;
+      box-shadow: 0 0 3px 1px white;
+      opacity: 0;
+
+      @for $i from 1 to 16 {
+        &:nth-child(#{$i}) {
+          top: (random(100) + vh);
+          left: (random(100) + vw);
+          animation: starlight (random(5) + 5 + s) (random(5) + s) infinite alternate;
+        }
+      }
+    }
+  }
+}
+
+@keyframes rocket-fly {
+  from {
+    transform: translateY(0);
+  }
+  to {
+    transform: translateY(calc(-100vh - 100px));
+  }
+}
+
+@keyframes starlight {
+  from {
+    opacity: 0;
+  }
+  to {
+    opacity: .8;
+  }
+}
+
+@keyframes story-text-in {
+  from {
+    opacity: 0;
+    transform: translateY(18px);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+#home-header {
+  background: $story-background;
+}
+
 #header-hero-wrapper {
   display: flex;
   justify-content: center;
@@ -11,6 +204,19 @@
     max-width: 100%;
     width: auto;
     height: auto;
+    opacity: 0;
+    animation: hero-fade 1s .5s forwards;
+  }
+}
+
+@keyframes hero-fade {
+  from {
+    opacity: 0;
+    transform: scale(.8);
+  }
+  to {
+    opacity: 1;
+    transform: scale(1);
   }
 }
 
@@ -22,18 +228,6 @@
     margin: 1rem auto;
   }
 } 
-
-@media screen and (min-width: 576px) {
-  #header-text {
-    font-size: 5rem;
-  }
-}
-
-@media screen and (min-width: 768px) {
-  #header-text {
-    font-size: 7rem;
-  }
-}
 
 @media screen and (min-width: 992px) {
   #projects {
@@ -47,11 +241,5 @@
         transform: translateY(-5rem);
       }
     }
-  }
-}
-
-@media screen and (min-width: 1200px) {
-  #header-text {
-    font-size: 9rem;
   }
 }
