--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -34,7 +34,7 @@ layout: default-page
   </div>
   <br><br>
   <div class="text-right">
-    <a class="btn text-deco-none" href="{{ '/blog/' | relative_url }}">Read other posts</a>
+    <a class="btn" href="{{ '/blog/' | relative_url }}">Read other posts</a>
   </div>
 
   {%- if page.comments and site.environment == 'production' or jekyll.environment == 'production' -%}
