Redesign store box options

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="bg-dark elevation-8">
+<footer class="page-footer bg-dark">
   <div class="container py-1">
     <div class="social-list">
       {%- if site.github_username -%}
