--- a/assets/css/buttons.scss
+++ b/assets/css/buttons.scss
@@ -16,7 +16,7 @@ $directions: "left", "right", "top", "bottom";
 button {
   font-size: 1.1rem;
   margin-bottom: .25rem;
-  width: 150px;
+  width: 100%;
   color: $dark;
   background-color: $light;
   box-shadow: none;
