--- a/_sass/_syntax-highlighting.scss
+++ b/_sass/_syntax-highlighting.scss
@@ -2,7 +2,7 @@
 // Theme: Monokai
 
 .highlight {
-  @extend .elevation-2;
+  @extend %elevation-2;
   overflow-x: auto;
   background-color: #272822;
   margin: 0;
