Change file names to kebab

--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -5,7 +5,7 @@
     {{ content }}
 
     {%- if site.google_analytics and site.environment == 'production' or jekyll.environment == 'production' -%}
-      {%- include google_analytics.html -%}
+      {%- include google-analytics.html -%}
     {%- endif -%}
   </body>
 </html>
