--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -39,6 +39,6 @@ layout: default-page
 
   {%- if page.comments and site.environment == 'production' or jekyll.environment == 'production' -%}
     <br><br>
-    {%- include disqus_comments.html -%}
+    {%- include disqus-comments.html -%}
   {%- endif -%}
 </article>
